--- a/calamari-clients.spec.in
+++ b/calamari-clients.spec.in
@@ -11,8 +11,8 @@
 # common
 #################################################################################
 Name:		calamari-clients
-Version: 	%{version}
-Release: 	%{?revision}%{?dist}
+Version: 	@VERSION@
+Release: 	@RELEASE@%{?dist}
 Summary:	Calamari GUI front-end components
 Requires: 	calamari-server
 License: 	MIT
